# ODU

./: .gitignore  .gitmodules  .travis.yml  Pipfile  README.md  _index.md  app.json  composer.json  config.toml  cs722-pointnet.ipynb  dev.env  docker-compose.yml  get_all_data.sh  package.json  phinx.php  readme.md
.github/workflows/: ci.yml  main.yml
apache/: 000-default.conf
api/: Dockerfile  package.json
api/api/: .htaccess  index.php
api/app/: config.php  dbconfig.php
api/tests/: GrantFactoryTest.php  UserTest.php
assets/: theme-overrides.scss
code/: main.py
content/: _index.md
cputemps/: Cargo.toml
cputemps/src/: lib.rs  writer.rs
cs450-project/: app.json  composer.json
cs450-project/api/: Dockerfile  phinx.php
cs450-project/frontend/: package-lock.json  package.json  pnpm-lock.yaml
cs517-computational-methods/: Cargo.toml
cs550-databases/: .gitignore
cs550-databases/api/: package.json
cs620-data-science/: Alex_Launi_CS620.ipynb  clusters.json  setup.cfg
cs724-bigdata-capstone/: citibike.slurm  design.tex  proposal.tex  rand.sh  submission.tex  visualize.slurm
cs773-datamining-capstone/: dtree.dot  inprogress.py  report.tex
cs795-lp/: .travis.yml  config.toml
frontend/: package-lock.json  package.json
presentation/: README.md  config.toml
project/: pointnet.py  tnet.py
rust/: Cargo.toml
rust/cputemps/: Cargo.toml
rust/cputemps/src/: lib.rs  main.rs  pairs.rs  parser.rs  processor.rs  writer.rs
test/: test_tokenizer.py
thematic/: clustering.py  constants.py  download_data.py  graph.html  tokenizer.py
(+131 files in other folders)
