[package]
name = "cputemps"
version = "0.1.0"
authors = ["Alexander Launi <alex.launi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.3.1"
regex = "1.3.9"
num-traits = "0.2"
launearalg = { path = '../launearalg' }

[dev-dependencies]
tempfile = "3"
rand = "0.7.3"